updated signin feature with social

--- a/dev-nomad/.env
+++ b/dev-nomad/.env
@@ -5,4 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=mongodb+srv://andybaeck22:JeXYjVWFmcy5T2ni@cluster0.iwrgor5.mongodb.net/test
-NEXTAUTH_SECRET = "NEXTAUTH_SECRET"
+NEXTAUTH_SECRET="NEXTAUTH_SECRET"
+
+GITHUB_ID=763a4d6271264cf86e1b
+GITHUB_SECRET=47484ec23f30dac206d69181e8f42c4127b4a280
+
+
+GOOGLE_CLIENT_ID=386153357226-tj0v000o3a2an94a2i6l63s5eq3jj9hu.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
